--- a/Project/frontend/package.json
+++ b/Project/frontend/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@headlessui/react": "^1.4.1",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -22,6 +23,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "typescript": "^4.4.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -50,6 +52,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.1",
+    "@types/uuid": "^8.3.1",
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
